-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.822 2010-11-18 20:46:48 guru Exp $
-----------------------------------------------------------------------------------------

2010-11-18	pwessel
	* gmt_map.c:	We have a safety valve for preventing a painful slow search
			around the map perimeter.  The search is appropriate for maps
			but not for mapproject results.  The limit was for 200 inch
			wide maps == 14400p.  A user ran pscoast with 14401p and was
			caught.  Now check for 400 inch and also check current page
			size (PAPER_MEDIA). If map width vastly outsizes the paper
			size then it is probably a projection job.
	* pslegend.c:	Need to keep the original -R around since it may be -R....r

2010-11-16	pwessel
	* gmt_plot.c:	Tried to free an unallocated array in GMT_draw_custom_symbol
	
2010-11-15	pwessel
	* grdproject.c:	Now assign proper x/y units.

2010-11-12	pwessel
	* spotter/rotconverter.c:	Forgot to skip args when -N or -S was used.

2010-11-10	pwessel
	* nearneighbor.c:	Changed default to a more reasonable -N4/2.
	
2010-11-05	jluis
	* meca/utilmeca.c:	Fix bug affecting the plot of P & T axis

2010-11-05	pwessel
	* blockmean.txt:	Referred to unknown -D option.

2010-11-04	remko
	* meca/*.txt:		Replaced .IP with .TP
	* configure.ac:		Updated to version 4.5.6

-----------------------------------------------------------------------------------------
2010-11-01	pwessel
	* GMT 4.5.5 finalized and released. GMT 5.0.0alpha announced, get via cvs
	NOTE: Windows binaries are built with VC2010 and will not run on older Windows
	versions prior to Windows XP SP2.
-----------------------------------------------------------------------------------------

2010-11-01	pwessel
	* Missing html:		gmt_shell_functions, gmtcolors, gmtget, gmtlogo
				img2google, isogmt, psbbox, sphdistance
				sphinterpolate, sphtriangulate, x2sys_merge
	* A few source files had DOS line endings by mistake